[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemy_bosses/ModularThinkerScene.gd" type="Script" id=1]
[ext_resource path="res://themes/main_text_theme.tres" type="Theme" id=2]
[ext_resource path="res://3d/export/enemy_thinker_body.gltf" type="PackedScene" id=3]
[ext_resource path="res://3d/export/enemy_thinker_eye.gltf" type="PackedScene" id=4]
[ext_resource path="res://3d/export/enemy_thinker_legs.gltf" type="PackedScene" id=5]
[ext_resource path="res://3d/export/enemy_thinker_right_hand.gltf" type="PackedScene" id=6]
[ext_resource path="res://3d/export/enemy_thinker_left_hand.gltf" type="PackedScene" id=7]
[ext_resource path="res://3d/export/enemy_thinker_neck.gltf" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[node name="ModularThinker" type="Spatial"]
script = ExtResource( 1 )

[node name="ThinkerHealthLabel" type="Label" parent="."]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 128.0
theme = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="EnemyBody" type="StaticBody" parent="."]
transform = Transform( 6, 0, 0, 0, 28, 0, 0, 0, 3, 0, -3, 0 )

[node name="CollisionShape" type="CollisionShape" parent="EnemyBody"]
shape = SubResource( 1 )

[node name="Body" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )

[node name="Body" type="Spatial" parent="Body"]

[node name="enemy_thinker_body" parent="Body/Body" instance=ExtResource( 3 )]

[node name="Eye" type="Spatial" parent="Body"]

[node name="enemy_thinker_eye" parent="Body/Eye" instance=ExtResource( 4 )]

[node name="LeftHand" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.5, 0 )

[node name="enemy_thinker_left_hand" parent="Body/LeftHand" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )

[node name="LeftHandSpawn" type="Spatial" parent="Body/LeftHand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2.42045, 0 )

[node name="Legs" type="Spatial" parent="Body"]

[node name="enemy_thinker_legs" parent="Body/Legs" instance=ExtResource( 5 )]

[node name="Neck" type="Spatial" parent="Body"]

[node name="enemy_thinker_neck" parent="Body/Neck" instance=ExtResource( 8 )]

[node name="RightHand" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.5, 0 )

[node name="enemy_thinker_right_hand" parent="Body/RightHand" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )

[node name="RightHandSpawn" type="Spatial" parent="Body/RightHand"]
